# Devr.AI

./: .gitignore  .prettierrc  .vimrc  README.md  env.example  netlify.toml  package-lock.json  pyproject.toml  pyvenv.cfg  setup.cfg
backend/: .env.example  README.md  config.py  docker-compose.yml  main.py  requirements.txt  routes.py  start_github_mcp_server.py  test_github_integration.py  test_mcp_server.py
backend/app/: models.py  routes.py
backend/app/agents/: __init__.py  classification_router.py  state.py
backend/app/agents/devrel/: agent.py  generate_response.py  generate_response_node.py  state.py  tool_wrappers.py
backend/app/agents/shared/: base_agent.py  classification_router.py  state.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: auth.py  health.py  integrations.py
backend/app/classification/: classification_router.py  prompt.py
backend/app/core/: config.py  dependencies.py
backend/app/core/config/: settings.py
backend/app/core/events/: __init__.py  base.py  discord_event.py  enums.py  event_bus.py  github_event.py  slack_event.py
backend/app/core/handler/: base.py  faq_handler.py  handler_registry.py  issue_handler.py  message_handler.py  onboarding_handler.py  pr_handler.py
backend/app/core/orchestration/: agent_coordinator.py  queue_manager.py
backend/app/database/falkor/code-graph-backend/: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/database/falkor/code-graph-backend/.github/: dependabot.yml
backend/app/database/falkor/code-graph-backend/.github/workflows/: python-app.yml  release-image.yml
backend/app/database/falkor/code-graph-backend/api/: __init__.py  auto_complete.py  graph.py  index.py  info.py  llm.py  project.py  prompts.py
backend/app/database/falkor/code-graph-backend/api/analyzers/: __init__.py  analyzer.py  source_analyzer.py
backend/app/database/falkor/code-graph-backend/api/analyzers/c/: analyzer.py
backend/app/database/falkor/code-graph-backend/api/analyzers/java/: analyzer.py
backend/app/database/falkor/code-graph-backend/api/analyzers/python/: analyzer.py
backend/app/database/falkor/code-graph-backend/api/code_coverage/: __init__.py
backend/app/database/falkor/code-graph-backend/api/code_coverage/lcov/: __init__.py  lcov.py
backend/app/database/falkor/code-graph-backend/api/entities/: __init__.py  entity.py  entity_encoder.py  file.py
backend/app/database/falkor/code-graph-backend/api/git_utils/: __init__.py  git_graph.py  git_utils.py
backend/app/database/falkor/code-graph-backend/static/: index.html
backend/app/database/falkor/code-graph-backend/tests/: index.py  test_c_analyzer.py  test_git_history.py  test_graph_ops.py  test_py_analyzer.py
backend/app/database/falkor/code-graph-backend/tests/endpoints/: test_auto_complete.py  test_find_paths.py  test_get_neighbors.py  test_graph_entities.py  test_list_commits.py  test_list_repos.py  test_repo_info.py
backend/app/database/falkor/code-graph-backend/tests/source_files/c/: src.c
backend/app/database/falkor/code-graph-backend/tests/source_files/py/: src.py
backend/app/database/supabase/: services.py
backend/app/database/weaviate/: __init__.py  operations.py
backend/app/db/supabase/: auth.py  supabase_client.py  users_service.py
backend/app/db/weaviate/: user_profiling.py  weaviate_client.py  weaviate_operations.py
backend/app/integrations/mcp/: client.py
backend/app/model/supabase/: models.py
backend/app/model/weaviate/: models.py
backend/app/models/: integration.py
backend/app/models/database/: supabase.py  weaviate.py
backend/app/scripts/supabase/: create_db.sql  populate_db.sql
backend/app/scripts/weaviate/: create_schemas.py  populate_db.py
backend/app/services/: integration_service.py
backend/app/services/auth/: management.py  supabase.py  verification.py
backend/app/services/codegraph/: __init__.py  repo_service.py
backend/app/services/embedding_service/: service.py
backend/app/services/github/: issue_processor.py
backend/app/services/user/: profiling.py
backend/app/services/vector_db/: service.py  sql.txt
backend/app/tests/: test_supabase.py  test_weaviate.py
backend/app/utils/: github_api.py
backend/bots/discord/: discordBot.py  discord_bot.py  discord_cogs.py
backend/bots/discord_bot/: discordBot.py
backend/database/: 01_create_integration_tables.sql
backend/integrations/discord/: bot.py  cogs.py  views.py
docs/: INSTALL_GUIDE.md  LEGAL_DOC.md
frontend/: .env example  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/contributors/: ContributorCard.tsx  ContributorsPage.tsx
frontend/src/components/dashboard/: Dashboard.tsx  StatCard.tsx
frontend/src/components/integration/: BotIntegration.tsx  BotIntegrationPage.tsx  ComingSoonModal.tsx  IntegrationModal.tsx
frontend/src/components/landing/: LandingPage.tsx
frontend/src/components/layout/: Modal.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  supabaseClient.ts  utils.ts
landing/: .gitignore  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  vite.config.ts
landing/public/: form-fallback.html
landing/src/: App.tsx  index.css
landing/src/pages/: Landing.tsx  PrivacyPolicy.tsx  TermsOfService.tsx
tests/: test_embedding_service.py  test_supabase.py  test_weaviate.py  tests_db.py
(+69 files in other folders)
