[project]
name = "devr-ai"
version = "0.1.0"
description = "Devr.AI is an AI-powered Developer Relations (DevRel) assistant designed to seamlessly integrate with open-source communities across platforms like Discord, Slack, GitHub, and Discourse."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "supabase (>=2.13.0,<3.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "py-cord (>=2.6.1,<3.0.0)",
    "pygithub (>=2.6.1,<3.0.0)",
    "slack-sdk (>=3.34.0,<4.0.0)",
    "langchain-groq (>=0.2.4,<0.3.0)",
    "groq (>=0.18.0,<0.19.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
packages = [{ include = "devr" }]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.1.2"
autopep8 = "^2.3.2"
autoflake = "^2.3.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
