[tool.poetry]
name = "code-graph-backend"
version = "0.4.2"
description = "code_graph is designed to help developers visualize and analyze the structure of their source code. It takes source code as input and generates a graph representation, making it easier to understand relationships and dependencies within the codebase."
authors = ["Roi Lipman <roilipman@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
graphrag-sdk = "^0.8.1"
tree-sitter = "^0.24.0"
validators = "^0.34.0"
falkordb = "^1.0.10"
tree-sitter-c = "^0.23.4"
tree-sitter-python = "^0.23.6"
tree-sitter-java = "^0.23.5"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
multilspy = {git = "https://github.com/AviAvni/multilspy.git", rev = "python-init-params"}
javatools = "^1.6.0"
pygit2 = "^1.17.0"
toml = "^0.10.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
